# ComputerVision

./: .gitignore  1 cv2 basics.ipynb  6 structure from motion.ipynb  7 faster R-CNN.ipynb  7 faster R-CNN.py  7 vis.py  8 dense optical flow.ipynb  8 sparse object tracking.ipynb  Lab3.ipynb  Lab6.1_zadanie.ipynb  Lab8.1_zadanie.ipynb  SFM copy.ipynb  SFM.ipynb  lab4.ipynb  lab6_SFM.ipynb  mov_to_gif.ipynb  pyproject.toml  resize_imgs.py
teoria/lab2/: progowanie.ipynb
theory/lab2/: filtracja.ipynb  model_HSV.ipynb
theory/lab5/: Lab5_kontury.ipynb  Lab5_momenty.ipynb  Lab5_morfologia.ipynb
