[project]
name = "computervision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pycocotools>=2.0.8",
    "scikit-learn>=1.6.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
